initial scriptqueue opti